# PredDRL

./: .dockerignore  .gitignore  DockerInstructions  Dockerfile  README.md  combination_obstacle_1_bk1  combination_obstacle_2_bk1  requirements.txt  run_docker_image.bash  run_docker_image_iirav.bash  turtlebot3_stage_3.launch  turtlebot3_stage_4.world
.Trash-1000/files/: trainer_torch.py  trainer_torch_custom_buffer.py
.Trash-1000/info/: frames.gv.trashinfo  frames.pdf.trashinfo  trainer_torch.py.trashinfo  trainer_torch_custom_buffer.py.trashinfo
predDRL_TD3/: README.md
preddrl_TD3/: README.md
preddrl_data/scripts/: prepare_data.py
preddrl_env/: environment_stage_3_bk.py  respawnGoal.py
preddrl_gazebo/: CMakeLists.txt  package.xml
preddrl_gazebo/launch/: social_contexts.launch
preddrl_gazebo/models/: actor_model.sdf
preddrl_gazebo/worlds/: social_contexts.world
preddrl_gazebo_plugin/: CMakeLists.txt  README.md  package.xml
preddrl_gazebo_plugin/launch/: social_contexts.launch
preddrl_gazebo_plugin/scripts/: preddrl_to_gazbo_world.py  spawn_preddrl_agents.py
preddrl_gazebo_plugin/src/: actor_poses_plugin.cpp
preddrl_gazebo_plugin/worlds/: social_contexts.world
preddrl_msgs/: CMakeLists.txt  package.xml
preddrl_msgs/msg/: AgentState.msg  AgentStates.msg  AgentTrack.msg  AgentTracks.msg  Waypoints.msg
preddrl_td3/: README.md  environment.yaml  requirements.txt  rsa_key  rsa_key.pub  trial_notes.txt
preddrl_td3/env/: environment_stage_3_bk.py  graph_utils.py  respawnGoal.py
preddrl_td3/misc/: get_replay_buffer.py  periodic_ops.py
preddrl_td3/results/20210802T134954.244906_TD3_/: command.txt  git-diff.txt  git-status.txt
preddrl_td3/results/20210802T142446.242810_TD3_/: environ.txt  git-log.txt
preddrl_td3/script/: run_td3.py  td3.py  trainer.py
preddrl_td3/scripts/: args.py  ddpg.py  env.py  net_params.yaml  run_td3.py  td3.py  trainer.py
preddrl_td3/scripts_pytorch/: run_torch.py  trainer_torch.py
preddrl_td3/scripts_tf/: run.py  run_td3.py  trainer.py
preddrl_td3/scripts_torch/: args.py  config.json  net_params.yaml  params.yaml  run_torch.py  test_cmd_vel.py  test_orca.py  test_ped_spawnner.py  trainer.py  trainer_custom_buffer.py  trainer_gcn.py  trainer_graph.py  trainer_torch.py  trainer_torch_custom_buffer.py  trainer_torch_original.py  trainer_torch_v1.8.0.py
preddrl_tracker/: CMakeLists.txt  package.xml  setup.py
preddrl_tracker/scripts/: node.py  node_tracks_handler.py  pedestrian_state_publisher.py  requirements.txt  scene.py  test.py  utils.py
preddrl_tracker/src/: node.py  pedestrian_state_publisher.py  scene.py  test.py
preddrl_turtlebot/turtlebot3_machine_learning/turtlebot3_dqn/: CMakeLists.txt
preddrl_turtlebot/turtlebot3_machine_learning/turtlebot3_dqn/nodes/: combination_obstacle_1  combination_obstacle_1_bk  combination_obstacle_2  moving_obstacle  odomtopath.cpp  sendgoal.cpp
results/20210802T172358.323986_TD3_/: command.txt  environ.txt  events.out.tfevents.1627896238.loc-P770ZM.21487.608.v2  git-diff.txt  git-head.txt  git-status.txt
(+122 files in other folders)
